KSENROLL-14554: Added spacer element to prevent days from collapsing in chrome and hiding the bg for the day
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@75074 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/courseCalendar.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/courseCalendar.less
@@ -17,6 +17,13 @@
     &--vertical {
         display: none;
     }
+
+    &--horizontal {
+        display: none;
+    }
+    &--vertical {
+        display: block;
+    }
 }
 
 
